src/ui/sonarr_ui/system/snapshots/managarr__ui__sonarr_ui__system__system_details_ui__system_details_ui_tests__tests__snapshot_tests__popup_SystemUpdates.snap
---
source: src/ui/sonarr_ui/system/system_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                    ╭  Updates  ───────────────────────────────────────────────────────────────────────────────────────────────────────────────╮                     
                    │The latest version of Sonarr is already installed                                                                         │                     
                    │                                                                                                                          │                     
                    │4.3.2.1 - 2023-04-15 02:02:53 UTC (Currently Installed)                                                                   │                     
                    │--------------------------------------------------------------------------------------------------------------------------│                     
                    │New:                                                                                                                      │                     
                    │  * Cool new thing                                                                                                        │                     
                    │Fixed:                                                                                                                    │                     
                    │  * Some bugs killed                                                                                                      │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │3.2.1.0 - 2023-04-15 02:02:53 UTC (Previously Installed)                                                                  │                     
                    │--------------------------------------------------------------------------------------------------------------------------│                     
                    │New:                                                                                                                      │                     
                    │  * Cool new thing (old)                                                                                                  │                     
                    │  * Other cool new thing (old)                                                                                            │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │2.1.0 - 2023-04-15 02:02:53 UTC                                                                                           │                     
                    │--------------------------------------------------------------------------------------------------------------------------│                     
                    │Fixed:                                                                                                                    │                     
                    │  * Killed bug 1                                                                                                          │                     
                    │  * Fixed bug 2                                                                                                           │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
