src/ui/sonarr_ui/system/snapshots/managarr__ui__sonarr_ui__system__system_details_ui__system_details_ui_tests__tests__snapshot_tests__system_details_ui_renders_loading_tasks.snap
---
source: src/ui/sonarr_ui/system/system_details_ui_tests.rs
expression: output
---
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
              ╭  Tasks  ───────────────────────────────────────────────────────────────────────────────╮                
              │                                                                                        │                
              │                                                                                        │                
              │ Loading ...                                                                            │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              ╰────────────────────────────────────────────────────────────────────────────────────────╯
